--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "keyboard"
   ],
   "author": "VoDACode",
-  "license": "MIT",
+  "license": "Apache 2.0",
   "dependencies": {
     "telegraf": "^4.16.3"
   },
